fixed aside label alignment

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ input {
     border-radius: 12px;
     cursor: pointer;
     font-size: 14px;
-    align-items: baseline;
+    align-items: center;
     justify-content: baseline;
     margin-left: 8px;
   }
